# pg_stage_rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README.ru.md
src/: conditions.rs  error.rs  lib.rs  main.rs  processor.rs  relations.rs  types.rs  unique.rs
src/format/: mod.rs  plain.rs
src/format/custom/: blocks.rs  header.rs  io.rs  mod.rs  toc.rs
src/mutator/: contact.rs  datetime.rs  identity.rs  json_update.rs  mask.rs  mod.rs  names.rs  network.rs  numeric.rs  simple.rs
src/mutator/locale/: en.rs  mod.rs  ru.rs
tests/: integration.rs
