[package]
name = "pg_stage"
version = "0.5.0"
edition = "2021"
description = "PostgreSQL dump anonymizer - streaming obfuscation for plain and custom formats"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
uuid = { version = "1", features = ["v4", "v5"] }
regex = "1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hmac = "0.12"
sha2 = "0.10"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
