[package]
name = "pg_stage_rs"
version = "0.3.0"
edition = "2021"
description = "PostgreSQL dump anonymizer - streaming obfuscation for plain and custom formats"

[features]
default = ["mimalloc-allocator", "parallel"]
mimalloc-allocator = ["dep:mimalloc"]
# Opt-in: requires cmake/cc in build env; swaps flate2 backend to zlib-ng for ~1.5-2x zlib throughput.
zlib-ng = ["flate2/zlib-ng"]
parallel = ["dep:crossbeam-channel", "dep:num_cpus"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
zstd = { version = "0.13", features = ["zstdmt"] }
memchr = "2"
uuid = { version = "1", features = ["v4", "v5"] }
regex = "1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hmac = "0.12"
sha2 = "0.10"
thiserror = "2"
ahash = { version = "0.8", features = ["serde"] }
mimalloc = { version = "0.1", default-features = false, optional = true }
crossbeam-channel = { version = "0.5", optional = true }
num_cpus = { version = "1.16", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
